--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,7 +11,7 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
+      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Content</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
@@ -29,7 +29,7 @@
 	  <!--
       <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
 	  -->
-      <a class="sidebar-nav-item" href="{{ site.github.me }}">GitHub</a>
+      <a class="sidebar-nav-item" href="{{ site.github.me }}">ECSI Geo</a>
 	  <span class="sidebar-nav-item">Phone 509 4891-6256</span>
     </nav>
 
