--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,10 +26,8 @@
           {% endif %}
         {% endif %}
       {% endfor %}
-	  <!--
       <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-	  -->
-      <a class="sidebar-nav-item" href="{{ site.github.me }}">ECSI Geo</a>
+      <a class="sidebar-nav-item" href="mailto:dawin.pierre@gmail.com">Contact us</a>
 	  <span class="sidebar-nav-item">Phone 509 4891-6256</span>
     </nav>
 
