--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,7 +14,7 @@
       <!--
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{site.baseurl}}">Home</a>
       -->
-      <a href="https://github.com/pdawine">Home</a>
+      <a href="https://pdawine.github.io/">Home</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
